--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="hanoi.js"></script>
+    <title>Tour Hanoi</title>
+    <!-- <script src="hanoi.js"></script> -->
+    <!-- <script src="hanoi-iteratif.js"></script> -->
 </head>
 <body>
-    <h1>Tour d'hanoi réalisation</h1>
-    
+    <h1>Tour d'hanoi réalisation</h1> 
+    Aucun rapport avec le vietnam mais cela pourrait
 </body>
 </html>
